Update processHelp.groovy